Remove deprecated option in current Fedora versions

--- a/templates/sshd_config.j2
+++ b/templates/sshd_config.j2
@@ -19,4 +19,6 @@ Subsystem {{ subsystem }}
 {{ sshd_extra }}
 {% endif %}
 
+{% if ansible_distribution != "Fedora" %}
 UsePrivilegeSeparation sandbox
+{% endif %}
