Change condition to package version rather than distro

--- a/templates/sshd_config.j2
+++ b/templates/sshd_config.j2
@@ -19,6 +19,6 @@ Subsystem {{ subsystem }}
 {{ sshd_extra }}
 {% endif %}
 
-{% if ansible_distribution != "Fedora" %}
+{% if openssh_version is version('7.5', '<') %}
 UsePrivilegeSeparation sandbox
 {% endif %}
